Update to latest version of 1.4.0.0.

--- a/src/main/resources/META-INF/modernbeta_at.cfg
+++ b/src/main/resources/META-INF/modernbeta_at.cfg
@@ -10,6 +10,9 @@ public-f net.minecraft.world.gen.structure.WoodlandMansion field_191072_a
 # MapGenScatteredFeature - ALLOWED_BIOMES
 public-f net.minecraft.world.gen.structure.MapGenScatteredFeature field_75061_e
 
+# ChunkPrimer - data
+public-f net.minecraft.world.chunk.ChunkPrimer field_177860_a
+
 ## BoP Access Transformers
 
 # GuiCreateWorld - selectedIndex
