--- a/src/main/resources/META-INF/modernbeta_at.cfg
+++ b/src/main/resources/META-INF/modernbeta_at.cfg
@@ -10,9 +10,6 @@ public-f net.minecraft.world.gen.structure.WoodlandMansion field_191072_a
 # MapGenScatteredFeature - ALLOWED_BIOMES
 public-f net.minecraft.world.gen.structure.MapGenScatteredFeature field_75061_e
 
-# ChunkPrimer - data
-public-f net.minecraft.world.chunk.ChunkPrimer field_177860_a
-
 # GuiCreateWorld - selectedIndex
 public net.minecraft.client.gui.GuiCreateWorld field_146331_K
 
@@ -27,3 +24,6 @@ public net.minecraft.server.MinecraftServer func_71192_d(Ljava/lang/String;)V
 
 # WorldServer - createBonusChest
 public net.minecraft.world.WorldServer func_73047_i()V
+
+# GuiCreateWorld - worldSeed
+public net.minecraft.client.gui.GuiCreateWorld field_146329_I
