--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,11 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
-projectName=modernbetaforge-example-mod
-projectGroup=mod.bespectacled.modernbetaforge-example-mod
+projectName=modernbetaexample
+projectGroup=mod.bespectacled.modernbetaexample
 projectMCVersion=1.12.2
 projectVersion=1.0.0.0
 projectATFile=modernbeta_at.cfg
+modernBetaFileID=6920891
 modernBetaMixinRefmap=
 modernBetaMixinConfig=
