--- a/src/main/resources/META-INF/modernbeta_at.cfg
+++ b/src/main/resources/META-INF/modernbeta_at.cfg
@@ -27,3 +27,6 @@ public net.minecraft.world.WorldServer func_73047_i()V
 
 # GuiCreateWorld - worldSeed
 public net.minecraft.client.gui.GuiCreateWorld field_146329_I
+
+# WorldInfo - generatorOptions
+public net.minecraft.world.storage.WorldInfo field_82576_c
